; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_http_free_reverse_proxy_data.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mg_http_free_reverse_proxy_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_reverse_proxy_data = type { i32* }
%struct.mg_http_proto_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@MG_F_SEND_AND_CLOSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_reverse_proxy_data*)* @mg_http_free_reverse_proxy_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mg_http_free_reverse_proxy_data(%struct.mg_reverse_proxy_data* %0) #0 {
  %2 = alloca %struct.mg_reverse_proxy_data*, align 8
  %3 = alloca %struct.mg_http_proto_data*, align 8
  store %struct.mg_reverse_proxy_data* %0, %struct.mg_reverse_proxy_data** %2, align 8
  %4 = load %struct.mg_reverse_proxy_data*, %struct.mg_reverse_proxy_data** %2, align 8
  %5 = getelementptr inbounds %struct.mg_reverse_proxy_data, %struct.mg_reverse_proxy_data* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %33

8:                                                ; preds = %1
  %9 = load %struct.mg_reverse_proxy_data*, %struct.mg_reverse_proxy_data** %2, align 8
  %10 = getelementptr inbounds %struct.mg_reverse_proxy_data, %struct.mg_reverse_proxy_data* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = call %struct.mg_http_proto_data* @mg_http_get_proto_data(i32* %11)
  store %struct.mg_http_proto_data* %12, %struct.mg_http_proto_data** %3, align 8
  %13 = load %struct.mg_http_proto_data*, %struct.mg_http_proto_data** %3, align 8
  %14 = getelementptr inbounds %struct.mg_http_proto_data, %struct.mg_http_proto_data* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %15, align 8
  %17 = icmp ne %struct.TYPE_3__* %16, null
  br i1 %17, label %18, label %30

18:                                               ; preds = %8
  %19 = load i32, i32* @MG_F_SEND_AND_CLOSE, align 4
  %20 = load %struct.mg_http_proto_data*, %struct.mg_http_proto_data** %3, align 8
  %21 = getelementptr inbounds %struct.mg_http_proto_data, %struct.mg_http_proto_data* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = or i32 %25, %19
  store i32 %26, i32* %24, align 4
  %27 = load %struct.mg_http_proto_data*, %struct.mg_http_proto_data** %3, align 8
  %28 = getelementptr inbounds %struct.mg_http_proto_data, %struct.mg_http_proto_data* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %29, align 8
  br label %30

30:                                               ; preds = %18, %8
  %31 = load %struct.mg_reverse_proxy_data*, %struct.mg_reverse_proxy_data** %2, align 8
  %32 = getelementptr inbounds %struct.mg_reverse_proxy_data, %struct.mg_reverse_proxy_data* %31, i32 0, i32 0
  store i32* null, i32** %32, align 8
  br label %33

33:                                               ; preds = %30, %1
  ret void
}

declare dso_local %struct.mg_http_proto_data* @mg_http_get_proto_data(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
